fix(waybar): add spacing between icon and text

--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -2,7 +2,7 @@
     min-height: 0;
     min-width: 0;
     font-family: Lexend, "JetBrainsMono NFP";
-    font-size: 16px;
+    font-size: 14px;
     font-weight: 500;
 }
 
